--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-Hello 石广哥!
-这是个人免费并自由发布信息的博客系统,并非github官方,麻烦给李哥说一下!
+<html>
+  <head>
+    <title>Hello 石广哥!</title>
+  </head>
+<body>
+  <h2>Hello 石广哥!</h2>
+  <hr />
+  <p>这是由个人免费注册并自由发布信息的博客系统,并非github官方,麻烦给李哥说一下!</p>
+<body>
+</html>
